--- a/EventAPI/appsettings.json
+++ b/EventAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "myConnection": "Server=LAPTOP-4OQPSNRM\\SQLEXPRESS;database=eventDB;trusted_connection=true;TrustServerCertificate=True"
+  }
 }
