--- a/EventAPI/appsettings.json
+++ b/EventAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "myConnection": "Server=LAPTOP-4OQPSNRM\\SQLEXPRESS;database=eventDB;trusted_connection=true;TrustServerCertificate=True"
+    "myConnection": "Server=LAPTOP-4OQPSNRM\\SQLEXPRESS;database=event;trusted_connection=true;TrustServerCertificate=True"
   }
 }
